RESOLVED FIXED270404
WebsiteDataStore doesn't need to subclass WTF::Identified
https://bugs.webkit.org/show_bug.cgi?id=270404
Summary WebsiteDataStore doesn't need to subclass WTF::Identified
Chris Dumez
Reported 2024-03-02 20:10:22 PST
WebsiteDataStore doesn't need to subclass WTF::Identified.
Attachments
Chris Dumez
Comment 1 2024-03-02 20:11:39 PST
EWS
Comment 2 2024-03-03 09:06:56 PST
Committed 275602@main (6c97190df128): <https://commits.webkit.org/275602@main> Reviewed commits have been landed. Closing PR #25383 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-03-03 09:07:15 PST
Note You need to log in before you can comment on or make changes to this bug.