WebsiteDataStore doesn't need to subclass WTF::Identified https://bugs.webkit.org/show_bug.cgi?id=270404

Reviewed by Darin Adler.

* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.h:

Canonical link: https://commits.webkit.org/275602@main